fix FS#2132 add overflow:auto for pre.code tags
also in the task description, not only comments.

--- a/themes/CleanFS/theme.css
+++ b/themes/CleanFS/theme.css
@@ -142,6 +142,7 @@ pre[class*="code "]::before {
 pre.code {
     background-color: #fff;
     border: 1px solid #ddd;
+    overflow:auto;
 }
 
 li ul, li ol { margin: 0; }
